--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h3 class="home__education">Frontend Developer</h3>
 
                     <div class="home__buttons">
-                        <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost">
+                        <a download="" href="assets/pdf/Sagar mahajan resume.pdf" class="button button--ghost">
                             Download CV
                         </a>
                         <a href="#about" class="button">About me</a>
