--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
                     <h1 class="home__name">Sagar Mahajan</h1>
-                    <h3 class="home__education">Frontend Developer</h3>
+                    <h3 class="home__education">Structural Engineer</h3>
 
                     <div class="home__buttons">
                         <a download="" href="assets/pdf/Sagar mahajan resume1.pdf" class="button button--ghost">
