--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
-                    <h1 class="home__name">Sagar Mahajan</h1>
+                    <h1 class="home__name">Sagar D Mahajan</h1>
                     <h3 class="home__education">Structural Engineer</h3>
 
                     <div class="home__buttons">
