--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>portfolio website:Sagar Mahajan </title>
+    <title>portfolio website:Sagar D Mahajan </title>
 </head>
 
 <body>
