--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>portfolio website:Sagar D Mahajan </title>
+    <title>portfolio website:Sagar Mahajan </title>
 </head>
 
 <body>
@@ -71,11 +71,11 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
-                    <h1 class="home__name">Sagar D Mahajan</h1>
+                    <h1 class="home__name">Sagar Mahajan</h1>
                     <h3 class="home__education">Structural Engineer</h3>
 
                     <div class="home__buttons">
-                        <a download="" href="assets/pdf/Sagar mahajan resume1.pdf" class="button button--ghost">
+                        <a download="" href="assets/pdf/Sagar mahajan resume1 (3).pdf" class="button button--ghost">
                             Download CV
                         </a>
                         <a href="#about" class="button">About me</a>
