--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Completed</h3>
-                            <span class="about__subtitle">10 + Projects</span>
+                            <span class="about__subtitle">50 + Projects</span>
                         </div>
 
                         <div class="about__box">
@@ -135,9 +135,9 @@
                         </div>
                     </div>
 
-                    <p class="about__description">Frontend developer, I create web pages with UI / UX user interface,I
-                        have years of experience and many clients are happy with the projects carried out.
-                    </p>
+                    <p class="about__description">Structural Engineer , I design G+55 Floor Residential Building in Etabs,I
+                        have 4 years of experience and many clients are happy with the projects carried out.
+                    </p> 
                     <a href="#contact" class="button">Contact Me</a>
 
                 </div>
@@ -151,7 +151,7 @@
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills__title">Frontend developer</h3>
+                    <h3 class="skills__title">Structural Engineer</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
