--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">2 Year Working </span>
+                            <span class="about__subtitle">4 Year Working </span>
                         </div>
 
                         <div class="about__box">
@@ -161,8 +161,8 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">HTML</h3>
-                                    <span class="skills__level">Basic</span>
+                                    <h3 class="skills__name">ETABS</h3>
+                                    <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
 
@@ -170,7 +170,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">CSS</h3>
+                                    <h3 class="skills__name">SAFE</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
