--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">JavaScript</h3>
+                                    <h3 class="skills__name">STADD PRO</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
@@ -192,7 +192,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Bootstrap</h3>
+                                    <h3 class="skills__name">SAFE 2000</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">React</h3>
+                                    <h3 class="skills__name">AUTO CAD</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
